--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".web.CreateAccountActivity"></activity>
-        <activity android:name=".web.SignInActivity" />
-        <activity android:name=".web.PostActivity" />
-        <activity android:name=".web.ManageAccountActivity" />
-        <activity android:name=".web.MainActivity">
+        <activity android:name=".CreateAccountActivity"></activity>
+        <activity android:name=".SignInActivity" />
+        <activity android:name=".PostActivity" />
+        <activity android:name=".ManageAccountActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".model.MyFirebaseMessagingService">
+            android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
